# Tyche

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
B/: .project
B/app/: .project  build.gradle.kts
central/: .gitignore  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go  sqlc.yaml
central/config/: config.go  config.yaml
central/proto/: pythonservice.proto  rustservice.proto
core/: .project  settings.gradle.kts
core/agentic/: functions.md
core/app/: .classpath  buf.gen.yaml  buf.yaml  build.gradle.kts
gateway/: .gitignore  go.mod  go.sum  main.go
gateway/proto/: stockrec.proto
generator/: main.py  new.html  pyproject.toml
generator/newsgen/: entity.py  poll.py  rss.py
legacy/central/: Makefile  (+4 more)
legacy/pythonGRPC/: pyproject.toml
legacy/pythonGRPC/proto/: pythonservice.proto
legacy/pythonGRPC/services/: backtest.py  wordprocessor.py
monitoring/: tyche_engine_dashboard.html
pythonGRPC/: .gitignore  buf.gen.yaml  main.py  pyproject.toml
tech_signal/: Cargo.toml  build.rs
tech_signal/proto/: stockrec.proto
tech_signal/src/: main.rs
tech_signal/src/server/: core.rs  mod.rs  server.rs  stock_handler.rs
tech_signal/src/services/: mod.rs
tech_signal/src/services/internal/: mod.rs  repository.rs
tech_signal/src/services/internal/cache/: cache.rs
tech_signal/src/services/internal/redis/: redis.rs
tech_signal/src/services/loadbalancer/: lb.rs  mod.rs
tech_signal/src/services/loadbalancer/strategies/: strategy.rs
tech_signal/src/services/redis/: redis.rs
tech_signal/src/services/scheduler/: scheduler.rs  ubee.rs
(+132 files in other folders)
