[package]
name = "tech_signal"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.3"
